# kuri_mbzirc_offboard_control

./: CMakeLists.txt  package.xml
config/: offboard_params.yaml  real_test.txt
launch/: offboard_ar_pose.launch  offboard_position_control.launch  offboard_redis.launch  px4test.launch~  px4test1.launch~
script/: fakeGPS.py  setpoint_vel.py  vision_pose.py
src/: mission_follow.cpp  offb_node.cpp  offb_node_mod.cpp  offb_node_mod_zcons.cpp  offb_node_pid.cpp  offboard_position_control.cpp  offboard_redis.cpp  pub_att.cpp
